########  2012-11-22  #########
alter table shop_orders_trade add column seller_flag int(11) DEFAULT NULL;
alter table shop_trades_mergetrade add column seller_flag int(11) DEFAULT NULL;
alter table shop_fenxiao_purchaseorder add column supplier_flag int(11) DEFAULT NULL;
########  2012-11-15  #########
alter table shop_trades_mergetrade add column has_out_stock tinyint(1) NOT NULL;
alter table shop_trades_mergetrade add column has_rule_match tinyint(1) NOT NULL;
alter table shop_trades_mergeorder add column out_stock tinyint(1) NOT NULL; 

alter table shop_users_user drop column update_items_datetime ;
alter table shop_users_user add column item_notify_updated datetime DEFAULT NULL;
alter table shop_users_user add column refund_notify_updated datetime DEFAULT NULL;
alter table shop_users_user add column trade_notify_updated datetime DEFAULT NULL;

alter table shop_trades_mergetrade add column has_merge tinyint(1) NOT NULL;
alter table shop_trades_mergeorder add column is_merge tinyint(1) NOT NULL;
alter table shop_trades_mergeorder add column is_rule_match tinyint(1) NOT NULL;
########  2012-10-12  #########
alter table shop_trades_mergeorder add column sys_status varchar(32) NOT NULL;
alter table shop_items_product add column is_assign tinyint(1) NOT NULL;
alter table shop_items_productsku add column is_assign tinyint(1) NOT NULL;
########  2012-10-07  #########